# rust_gps_receiver

./: Cargo.toml
src/: config.rs  gps_config.toml  main.rs
