#![feature(ascii_char)]
[package]
name = "gps-interface"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
ascii = "1.1.0"
bytes = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serialport = {version="4.8.1"}
tokio = { version = "1.48.0", features = ["full"] }
tokio-serial = "5.4.5"
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.17", features = ["codec"] }
toml = "0.9.8"


